# capability-python

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
my_project/: settings.py  urls.py
sample_app/: models.py  urls.py  views.py
sample_app/migrations/: 0001_initial.py
sample_app/tests/e2e/: test_create_post.py
testcode_quiz/apps/: actions.py  joke.py  messenger.py  purchase.py  task_manager.py
testcode_quiz/tests/bad/: test_actions.py  test_joke.py  test_messenger.py  test_purchase.py  test_task_manager.py
testcode_quiz/tests/good/: test_actions.py  test_messenger.py  test_purchase.py  test_task_manager.py
