[tool.poetry]
name = "e2e-quiz"
version = "0.1.0"
description = ""
authors = ["Naoyaki <yappledore14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.7.2"
azure-functions = "^1.21.3"
django = "^5.1.3"

[tool.poetry.group.dev.dependencies]
playwright = "^1.49.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

ignore = ["D400", "D415"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"